(all) bugfixes and a bit of cleanup
