# app/api/swagger.yml
@@ -761,60 +761,3 @@ paths:
       responses:
         501:
           description: "Not implemented"
-  /api/job/{username}/{jobid}/metrics:
-    get:
-      tags:
-        - "Results Legacy"
-      summary: "Get job metrics (deprecated)"
-      security:
-        - Bearer: []
-      parameters:
-        - in: "path"
-          name: "username"
-          type: "string"
-          required: true
-        - in: "path"
-          name: "jobid"
-          type: "string"
-          required: true
-      responses:
-        501:
-          description: "Not implemented"
-  /api/job/{username}/{jobid}/visualization:
-    get:
-      tags:
-        - "Results Legacy"
-      summary: "Get job visualization (deprecated)"
-      security:
-        - Bearer: []
-      parameters:
-        - in: "path"
-          name: "username"
-          type: "string"
-          required: true
-        - in: "path"
-          name: "jobid"
-          type: "string"
-          required: true
-      responses:
-        501:
-          description: "Not implemented"
-  /api/job/{username}/{jobid}/logs:
-    get:
-      tags:
-        - "Results Legacy"
-      summary: "Get job logs (deprecated)"
-      security:
-        - Bearer: []
-      parameters:
-        - in: "path"
-          name: "username"
-          type: "string"
-          required: true
-        - in: "path"
-          name: "jobid"
-          type: "string"
-          required: true
-      responses:
-        501:
-          description: "Not implemented"
